objects/Opportunity_Approvers__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom Setting is used to define Opportunity Approvers.</description>
    <fields>
        <fullName>Approver_Id__c</fullName>
        <description>This field contains the approvers user Id</description>
        <label>Approver Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <description>This field contains the approvers name.</description>
        <label>Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPLs__c</fullName>
        <description>This custom settings contains Cable Assembly GPLs</description>
        <label>GPLs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Approver__c</fullName>
        <label>Test Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Approvers</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approver_Id__c</columns>
        <columns>Approver_Name__c</columns>
        <columns>GPLs__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>